--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pandas = "^2.2"
 requests = "^2.0"
 dvc = "^3.59.2"
 mlflow = "^2.22.1"
+wandb = "^0.20.1"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.15"
